--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "react-learn",
+  "name": "goit-typescript-hw-02",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build-github": "vite build --base=/template-react-vite-project/",
+    "build-github": "vite build --base=/goit-typescript-hw-02/",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -26,12 +26,14 @@
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.23.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "typescript": "^5.8.3",
     "vite": "^6.2.0"
   },
   "author": "PushEax <pusheax.vk@gmail.com>"
